# minurl

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  compose.yaml  schema.cql
monitoring/grafana/datasources/: grafana.db
monitoring/grafana/provisioning/dashboards/: providers.yml
monitoring/prometheus/: prometheus.yml
src/: error.rs  main.rs  middleware.rs
src/apis/: common.rs  mod.rs  redirect.rs  url_mgmt.rs  usage.rs
src/apis/api_models/: mod.rs
src/db/: crud.rs  mod.rs
test/: app.py
