[package]
name = "Minurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.5.1"
base64 = "0.22.0"
chrono = "0.4.34"
lazy_static = "1.4.0"
md5 = "0.7.0"
serde = {version = "1.0.197", features= ["derive"]}
thiserror = "1.0.57"
